k8s/nodebackend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodebackend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodebackend
  template:
    metadata:
      labels:
        app: nodebackend
    spec:
      containers:
      - name: nodebackend
        image: ashif579/nodebackend:latest
        imagePullPolicy: IfNotPresent  # For local testing with Minikube/Docker Desktop
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: nodebackend-service
spec:
  selector:
    app: nodebackend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
